# MyGui

./: CMakeLists.txt  README.md
include/: RayGUI.h
src/: Button.cpp  Exception.cpp  GuiElements.cpp  IGuiElement.cpp  Screen.cpp  TextEdit.cpp  Window.cpp  types.cpp
src/headers/: GuiElements.h  IGuiElement.h  Window.h  types.h
src/headers/Background/: Exception.h
src/headers/GuiElements/: Button.h  Screen.h  TextEdit.h
